--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
     </main>
     <footer>
-        &copy; Huy Dang - 1161059
+        <p>&copy; Huy Dang - 1161059</p>
     </footer>
     <script src="scripts/app.js"></script>
 </body>
