--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <footer>
         &copy; Huy Dang - 1161059
     </footer>
+    <!-- add scripts from app.js -->
     <script src="scripts/app.js"></script>
 </body>
 
